# solvault

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 5c4c062d5858_add_expires_at_to_memories.py  aa5bedf71c05_initial.py  b1971f10a405_add_memory_tables.py
src/sol/: cli.py  config.py  database.py  logging_config.py  utils.py
src/sol/channels/cli/: chat.py
src/sol/channels/telegram/: bot.py
src/sol/core/: agent.py  errors.py  llm.py  prompts.py
src/sol/gateway/: dependencies.py  main.py  schemas.py
src/sol/gateway/api/: router.py
src/sol/gateway/api/v1/: health.py  messages.py  ws.py
src/sol/memory/: extractor.py  injector.py  models.py  retriever.py  schemas.py  store.py  tasks.py
src/sol/router/: message_router.py
src/sol/session/: manager.py  models.py  token_window.py
src/sol/tools/: __init__.py  approval.py  permissions.py  shell.py
src/sol/tools/file/: edit.py  read.py  write.py
src/sol/tools/memory/: save.py  search.py
src/sol/tools/web/: fetch.py  research.py  search.py
tests/: conftest.py
tests/evals/: conftest.py  harness.py  test_agent_response.py  test_memory_extraction.py
tests/unit/: test_config.py
tests/unit/channels/telegram/: test_bot.py
tests/unit/core/: test_agent.py  test_prompts.py
tests/unit/gateway/api/v1/: test_health.py  test_messages.py
tests/unit/memory/: test_extractor.py  test_injector.py  test_models.py  test_retriever.py  test_schemas.py  test_store.py
tests/unit/router/: test_message_router.py
tests/unit/session/: test_manager.py  test_token_window.py
