[project]
name = "solvault"
version = "0.1.0"
description = "Sol — privacy-first personal AI assistant"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "alembic>=1.16",
    "tiktoken>=0.7",
    "structlog>=24.1",
    "websockets>=13.0",
    "click>=8.1",
    "langchain-openai>=0.3",
    "langgraph>=0.2",
    "ddgs>=8.0",
    "aiogram>=3.0",
    "httpx>=0.27",
    "sqlite-vec>=0.1.9",
    "curl-cffi>=0.15.0",
    "trafilatura>=2.0.0",
    "langchain>=1.2.15",
]

[project.scripts]
sol = "sol.cli:cli"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sol"]

[tool.ruff]
line-length = 120
exclude = ["alembic", "alembic/versions"]

[tool.ruff.lint]
select = [
    "A",      # flake8-builtins
    "ANN",    # flake8-annotations
    "ASYNC",  # async best practices
    "C4",     # flake8-comprehensions
    "C90",    # mccabe complexity
    "I",      # isort
    "RET",    # return simplification
    "SIM",    # simplification
    "T20",    # print statements
    "UP",     # pyupgrade
]
ignore = ["ANN002", "ANN003", "ANN204"]

[tool.ruff.lint.isort]
known-first-party = ["sol"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "ANN001",  # missing type annotation for function argument
    "ANN201",  # missing return type annotation for public function
    "ANN202",  # missing return type annotation for private function
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "eval: LLM evaluation tests requiring a running LM Studio instance (deselect with '-m not eval')",
]
